[package]
name = "keycracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh-key = { version = "0.5.1", features = ["dsa", "rsa"] }
ssh-rs = "0.3.2"
clap = { version = "3.2.22", features = ["derive"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
