[package]
name = "keycracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh-rs = "0.3.2"
clap = { version = "3.2.22", features = ["derive"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
console = "0.15.5"
crossbeam = "0.8.2"
osshkeys = "0.6.2"
chrono = "0.4.24"
